fixed 10px oversize on mobile & made bg grid inline

--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -8,6 +8,8 @@
 @import "media.scss";
 
 $navbar-height: 60px;
+$about-bg-sm: url('data:image/svg+xml;utf8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%3Csvg%20width%3D%2248px%22%20height%3D%2248px%22%20viewBox%3D%220%200%2048%2048%22%20version%3D%221.1%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cdefs%3E%3Crect%20width%3D%2248%22%20height%3D%2248%22%20id%3D%22artboard_1%22%20/%3E%3CclipPath%20id%3D%22clip_1%22%3E%3Cuse%20xlink%3Ahref%3D%22%23artboard_1%22%20clip-rule%3D%22evenodd%22%20/%3E%3C/clipPath%3E%3C/defs%3E%3Cg%20id%3D%22grid-sm%22%20clip-path%3D%22url%28%23clip_1%29%22%3E%3Cuse%20xlink%3Ahref%3D%22%23artboard_1%22%20stroke%3D%22none%22%20fill%3D%22%23FFFFFF%22%20fill-opacity%3D%220%22%20/%3E%3Cpath%20d%3D%22M0%200L48%200L48%2048L0%2048L0%200Z%22%20id%3D%22bg%22%20fill%3D%22%230D0513%22%20fill-rule%3D%22evenodd%22%20stroke%3D%22none%22%20/%3E%3Cpath%20d%3D%22M1%2048L1%200%22%20transform%3D%22translate%28-1%200%29%22%20id%3D%22line-v%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%20stroke%3D%22%23C96949%22%20stroke-width%3D%221%22%20stroke-linecap%3D%22square%22%20/%3E%3Cpath%20d%3D%22M0%201L48%201%22%20transform%3D%22translate%28-0%20-1%29%22%20id%3D%22line-h%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%20stroke%3D%22%23C96949%22%20stroke-width%3D%221%22%20stroke-linecap%3D%22square%22%20/%3E%3C/g%3E%3C/svg%3E');
+$about-bg-lg: url('data:image/svg+xml;utf8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%3Csvg%20width%3D%2296px%22%20height%3D%2296px%22%20viewBox%3D%220%200%2096%2096%22%20version%3D%221.1%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cdefs%3E%3Crect%20width%3D%2296%22%20height%3D%2296%22%20id%3D%22artboard_1%22%20/%3E%3CclipPath%20id%3D%22clip_1%22%3E%3Cuse%20xlink%3Ahref%3D%22%23artboard_1%22%20clip-rule%3D%22evenodd%22%20/%3E%3C/clipPath%3E%3C/defs%3E%3Cg%20id%3D%22grid-lg%22%20clip-path%3D%22url%28%23clip_1%29%22%3E%3Cuse%20xlink%3Ahref%3D%22%23artboard_1%22%20stroke%3D%22none%22%20fill%3D%22%23FFFFFF%22%20fill-opacity%3D%220%22%20/%3E%3Cpath%20d%3D%22M0%200L96%200L96%2096L0%2096L0%200Z%22%20id%3D%22bg%22%20fill%3D%22%230D0513%22%20fill-rule%3D%22evenodd%22%20stroke%3D%22none%22%20/%3E%3Cpath%20d%3D%22M1%2096L1%200%22%20transform%3D%22translate%28-1%200%29%22%20id%3D%22line-v%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%20stroke%3D%22%23C96949%22%20stroke-width%3D%221%22%20stroke-linecap%3D%22square%22%20/%3E%3Cpath%20d%3D%22M0%201L96%201%22%20transform%3D%22translate%28-0%20-1%29%22%20id%3D%22line-h%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%20stroke%3D%22%23C96949%22%20stroke%20width%3D%221%22%20stroke-linecap%3D%22square%22%20/%3E%3C/g%3E%3C/svg%3E');
 $project-gradient-odd:  linear-gradient(to left,  rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2));
 $project-gradient-even: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2));
 
@@ -25,14 +27,13 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   min-width: 240px;
   
   @include media-mobile() {
-    width: 100vw;
     min-height: 100vh;
   }
   @include media-desktop() {
-    width: 100%;
     margin-top: $navbar-height;
   }
   
@@ -365,10 +366,11 @@ body[data-page=home] #jumbotron {
 #omega > .fullspan {
   align-self: stretch;
   width: auto;
-  padding: 10pt;
+  padding: 10pt 0;
 }
 
 #omega > * > .content {
+  box-sizing: border-box;
   padding: 10px;
   @include media-desktop() {width: 1000px}
 }
